test/files/neg/t7519-b.check
Use_2.scala:6: error: No implicit view available from String => K.
  val x: Q = ex.Mac.mac("asdf")
                       ^
one error found
